src/Header/mobile-header.css
@media screen and (min-width: 320px) and (max-width: 767px) {
  body {
    position: relative;
    max-width: 100%;
    overflow-x: hidden;
    /* width: 375px; */
  }
  .Navbar-header {
    position: absolute;
    width: 100%;
    /* width: 375px; */
    height: 136px;
    left: 0px;
    top: 0px;
    background-image: url("../../assets/mobile/bg-pattern-header.svg");
    background-repeat: no-repeat;
    background-size: cover;
  }
  .navbar-logo {
    position: absolute;
    height: 32px;
    width: 115px;
    left: 24px;
    top: 32px;
  }
  .theme-toggle-container {
    left: 73%;
    /* left: 270px; */
    top: 36px;
  }
  .icon-moon {
    position: absolute;
    width: 12px;
    height: 12px;
    left: 67px;
    top: 2px;
  }
  .icon-sun {
    position: absolute;
    width: 20px;
    height: 18.6px;
    left: -37px;
    top: 3px;
  }
  .filter-bar {
    position: absolute;
    width: 327px;
    height: 80px;
    left: 24px;
    top: 96px;
  }
  .filter-search-container {
    /* column-gap: 16px; */
    justify-content: space-evenly;
    flex-direction: row-reverse;
    position: absolute;
    width: 327px;
    /* background: green; */
    height: 80px;
    left: 24px;
    /* top: 96px; */
  }
  .filter-search-container > input {
    position: absolute;
    left: 24px;
    height: 16px;
    width: 105px;
    top: 31px;
    line-height: 20px;
  }
  .filter-search-container::after {
    display: none;
  }
  .filter-location-container::after {
    width: 353px;
    height: 1px;
    left: -50px;
    top: 48px;
    z-index: 10;
    /* top: 297px; */
  }

  .icon-filter {
    display: block;
    position: absolute;
    left: 195px;
    /* left: 219px; */
    top: 30px;
    width: 20px;
    height: 20px;
    opacity: 1;
    background: var(--white);
    cursor: pointer;
  }
  .filter-search-container > label {
    position: absolute;
    width: 48px;
    height: 48px;
    left: 233px;
    /* left: 263px; */
    top: 16px;
    background: var(--violet);
  }
  /* icon-search svg image color change to white  */
  /* first brightness and saturate needed to obtain desire color */
  .icon-search {
    filter: brightness(0) saturate(100%) invert(100%) sepia(93%) saturate(0%)
      hue-rotate(252deg) brightness(113%) contrast(100%);
    position: absolute;
    width: 20px;
    height: 20px;
    left: 14px;
    top: 14px;
  }
  .filter-location-container {
    display: none;
  }
  .filter-fullTime-container {
    display: none;
    width: 148px;
    height: 24px;
    left: 24px;
    top: 240px;
    /* top: 322px; */
  }
  .full-time-checkbox {
    position: absolute;
    right: 84%;
    margin-bottom: 24px;
  }
  .filter-fullTime-container > label {
    margin-bottom: 24px;
    position: absolute;
    width: 110px;
    height: 20px;
    left: 40px;
    /* top: 3px; */
    line-height: 20px;
  }
  .filter-button {
    display: none;
    position: absolute;
    width: 279px;
    height: 48px;
    left: 24px;
    top: 274px;
    z-index: 10;
  }
  /* contents style section */
  .main-container {
    left: 50%;
    transform: translate(-50%, 0%);
    top: 208px;
    width: 327px;
    /* background-color: red; */
  }
  .cards-container {
    /* top: 225px; */
    height: 3300px;
    /* left: 5%; */
    grid-template-columns: repeat(1, 327px);
    grid-row-gap: 49px;
    padding-top: 10%;
  }
  .card {
    width: 327px;
  }
  .load-more-btn-container {
    margin: 32px auto;
  }

  /* details page styles */
  .details-header-bar {
    width: 327px;
    height: 230px;
    left: 24px;
    top: 96px;
  }
  .details-company-logo {
    width: 50px;
    height: 50px;
    /* right: 139px; */
    left: calc(50% - 25px);
    /* left: 42.5%; */
    top: -10%;
    border-radius: 15px;
  }
  .details-companyNameSite-container {
    position: relative;
    height: 52px;
    top: 49px;
    /* left: 136px;/ */
    left: calc(40%);
  }
  .details-company-name {
    width: 190px;
  }
  .details-company-site {
    position: relative;
    width: 195px;
    overflow-x: scroll;
    left: -32px;
  }
  .details-companyLink-btn-container {
    left: 90px;
    top: 125px;
  }
  .details-position-info-container {
    width: 327px;
    left: 24px;
    top: 125px;
  }
  .details-position-about {
    height: 175px;
    left: 24px;
    top: 40px;
  }
  .details-position {
    height: 20px;
    left: 0%;
    font-size: var(--fs-20);

    top: 27px;
  }
  .details-location {
    top: 62px;
  }
  .main-apply-now-btn-container {
    width: 279px;
    height: 48px;
    bottom: 0%;
  }
  .btn-applyNow {
    width: 100%;
    height: 100%;
  }
  .details-position-description {
    width: 278px;
    left: 6.58%;
    margin-top: 64px;
  }
  .roles-heading,
  .requirements-heading {
    height: 20px;
    margin: 0px 0px 28px 24px;
  }
  .requirements-description,
  .roles-description {
    width: 278px;
    margin: 0px 25px 32px 24px;
  }
  .list-container {
    max-width: 253px;
    margin: 0px 0px 40px 54px;
    line-height: 27px;
    font-weight: var(--fw-regular);
    font-size: var(--fs-16);
  }
  .requirements-list > li::before {
    margin-right: 28px;
  }
  .details-footer {
    width: 100%;
    height: 96px;
    top: 189px;
  }

  .details-footer-apply-btn-container {
    width: 327px;
    height: 48px;
    left: 24px;
    top: 25px;
  }
  .details-footer-position {
    display: none;
  }
}

